create splash layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Note Me</string>
+    <string name="lets">Let\'s More Productive</string>
+    <string name="noteMe">NOTE ME</string>
 </resources>
